[package]
name = "todop"
version = "1.0.0"
edition = "2021"
authors = ["Philip Johansson <philjn@proton.me>"]

homepage = "https://github.com/kjughx/todop"
repository = "https://github.com/kjughx/todop"
description = "A simple proc-macro for (forward-) declaring unimplemented functions."
documentation = "https://docs.rs/todop"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
